--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <main class="card" role="main" aria-labelledby="title">
     <h1 id="title">Scaling Tool</h1>
-    <p class="sub"><em>Real-life scaled dimensions from X-rays. Runs 100% locally in your browser.</em></p>
+    <p class="sub">Real-life scaled dimensions from X-rays. Runs 100% locally in your browser.</p>
     <p class="byline"><em>By Amed for Dr. Giotikas</em></p>
 
     <form id="calc-form" novalidate>
