Update footer text to include copyright symbol

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <main class="card" role="main" aria-labelledby="title">
     <h1 id="title">Scaling Tool</h1>
     <p class="sub">Real-life scaled dimensions from X-rays. Runs 100% locally in your browser.</p>
-    <p class="sub"><em>By Amed for Dr. Giotikas</em></p>
+    <p class="sub"><em>© Built by Amed for Dr. Giotikas</em></p>
 
     <form id="calc-form" novalidate>
       <div class="grid" aria-describedby="helper">
